<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/myLayout"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:padding="12dp"
        android:text="Medicine Details" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/rollLayout"
        android:layout_width="180dp"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editRollno"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Roll No"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="180dp"
        android:layout_gravity="left"
        android:padding="10dp"
        android:layout_height="wrap_content"
        >
        <!--android:layout_centerHorizontal="true"-->
        <EditText
            android:id="@+id/editName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Name"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/marksLayout"
        android:layout_width="180dp"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editMarks"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Marks"
            />
    </android.support.design.widget.TextInputLayout>


   <!-- <TextView android:text="@string/roll_no"
        android:layout_x="30dp"
        android:layout_y="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText android:id="@+id/editRollno"
        android:inputType="number"
        android:layout_x="150dp"
        android:layout_y="50dp"
        android:layout_width="150dp"
        android:layout_height="40dp"/>-->

    <LinearLayout
        android:id="@+id/myLayout1"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/myLayout2"
            android:layout_marginTop="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <Button
        android:id="@+id/btnAdd"
        android:text="@string/add"
        android:layout_width="100dp"
        android:layout_height="40dp"/>

    <Button	  android:id="@+id/btnDelete"
        android:text="@string/delete"
        android:layout_width="100dp"
        android:layout_height="40dp"/>

    <Button   android:id="@+id/btnModify"
        android:text="@string/modify"
        android:layout_width="100dp"
        android:layout_height="40dp"/>

            </LinearLayout>

        <LinearLayout
            android:id="@+id/myLayout3"
            android:layout_marginTop="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <Button   android:id="@+id/btnView"
        android:text="@string/view"
        android:layout_width="100dp"
        android:layout_height="40dp"/>

    <Button   android:id="@+id/btnViewAll"
        android:text="@string/view_all"
        android:layout_width="100dp"
        android:layout_height="40dp"/>

    <Button   android:id="@+id/btnShowInfo"
        android:text="@string/show_info"
        android:layout_width="100dp"
        android:layout_height="40dp"/>

            </LinearLayout>

    </LinearLayout>

    </LinearLayout>


